<resources>
    <string name="preference_sync_url">sync_url</string>
    <string name="preference_sync_frequency">sync_frequency</string>
    <string name="preference_sync_wifi">sync_wifi_only</string>
    <string name="preference_email">email</string>
    <string name="preference_seen_welcome">seen_welcome</string>
    <string name="preference_page_excerpt">show_page_excerpt</string>
    <string name="preference_ui">ui</string>
    <string name="preference_theme">theme</string>
    <string name="preference_editor_font_size">editor_font_size</string>
    <string name="preference_preview_font_size">preview_font_size</string>
    <string name="preference_default_to_editor">default_to_editor</string>
    <string name="last_sync_push_at">last_sync_push_at</string>
    <string name="last_sync_pull_at">last_sync_pull_at</string>

    <string name="app_name">Quasar</string>
    <string name="title_trash">Trashed</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_sort">Sort</string>
    <string name="title_recent">Recent</string>
    <string name="title_all_notes">All Notes</string>
    <string name="title_current_version">Current Version</string>
    <string name="title_revisions">Revisions</string>
    <string name="title_autosaves">AutoSaves</string>
    <string name="title_snapshots">Snapshots</string>
    <string name="title_autosave">AutoSave</string>
    <string name="title_snapshot">Snapshot</string>
    <string name="title_title">Title</string>
    <string name="title_created">Created</string>
    <string name="title_updated">Updated</string>
    <string name="title_ascending">Ascending</string>
    <string name="title_descending">Descending</string>
    <string name="title_no_title">Untitled Page</string>
    <string name="title_no_pages">No Pages Found</string>
    <string name="title_no_content">No Content, Swipe to Edit</string>
    <string name="title_remove_account">Remove this Account?</string>

    <string name="hint_search">Search...</string>
    <string name="hint_title">Title</string>
    <string name="hint_tags">Tags</string>
    <string name="hint_content">Write Something</string>

    <string name="message_snapshot_created">Snapshot Created</string>
    <string name="message_revision_restored">Revision Restored</string>
    <string name="message_revision_deleted">Revision Deleted</string>
    <string name="message_trashed">Page Trashed</string>
    <string name="message_untrashed">Page Restored</string>
    <string name="message_deleted">Page Deleted</string>
    <string name="message_favorite">Starred</string>
    <string name="message_unfavorite">Unstarred</string>
    <string name="message_no_undo">This action cannot be undone</string>
    <string name="message_remove_account">Data will not be deleted</string>

    <string name="confirmation_delete">Permanently delete this page?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_page_sync">Sync Now</string>
    <string name="action_search">Search</string>
    <string name="action_clear">Clear</string>
    <string name="action_snapshot">Create Snapshot</string>
    <string name="action_trash">Trash</string>
    <string name="action_untrash">Remove from Trash</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_unfavorite">Unfavorite</string>
    <string name="action_delete">Delete Permanently</string>
    <string name="action_restore">Restore</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General Preferences -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_default_to_editor">Show Editor by Default</string>
    <string name="pref_description_default_to_editor">Show the editor by default when viewing page detail</string>

    <string name="pref_title_show_page_excerpt">Show Note Excerpt</string>
    <string name="pref_description_show_page_excerpt">Show Note Excerpt When Scrolling List</string>

    <!-- Sync Preferences -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_system_sync_settings">Account</string>
    <string name="pref_title_add_account">Add Quasar Account</string>
    <string name="pref_title_sync_url">URL</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_sync_wifi_only">Sync only on Wifi</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <!-- Appearance Preferences -->
    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_ui_default">light</string>
    <string name="pref_title_ui">UI Theme</string>
    <string-array name="pref_ui_titles">
        <item>Light</item>
        <item>Dark</item>
        <item>Match Editor</item>
    </string-array>
    <string-array name="pref_ui_values">
        <item>light</item>
        <item>dark</item>
        <item>editor</item>
    </string-array>
    <string name="pref_theme_default">Github</string>
    <string name="pref_title_theme">Code Theme</string>
    <string-array name="pref_theme_titles">
        <item>Github</item>
        <item>Monokai</item>
        <item>Solarized Dark</item>
        <item>Solarized Light</item>
        <item>Synthwave</item>
        <item>Tomorrow</item>
        <item>Tomorrow Night</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>Github</item>
        <item>Monokai</item>
        <item>SolarizedDark</item>
        <item>SolarizedLight</item>
        <item>Synthwave</item>
        <item>Tomorrow</item>
        <item>TomorrowNight</item>
    </string-array>

    <string name="pref_font_size_default">14</string>
    <string name="pref_title_editor_font_size">Editor Font Size</string>
    <string name="pref_title_preview_font_size">Preview Font Size</string>
    <string-array name="pref_font_size_titles">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Larger</item>
        <item>Huge</item>
    </string-array>
    <string-array name="pref_font_size_values">
        <item>10</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="title_activity_account_authenticator">Sign in</string>
    <string name="prompt_url">Quasar URL</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_skip_sign_in">Continue Without an Account</string>
    <string name="error_invalid_url">This url is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
