<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".ui.pages.PageActivity">
    <item android:id="@+id/action_trash"
          android:title="@string/action_trash"
          android:icon="@drawable/trash"
          app:showAsAction="never"/>
    <item android:id="@+id/action_untrash"
          android:title="@string/action_untrash"
          android:icon="@android:drawable/ic_menu_revert"
          app:showAsAction="never"/>
    <item android:id="@+id/action_favorite"
          android:title="@string/action_favorite"
          android:icon="@drawable/star"
          app:showAsAction="never"/>
    <item android:id="@+id/action_unfavorite"
          android:title="@string/action_unfavorite"
          android:icon="@drawable/star_filled"
          app:showAsAction="never"/>
    <item android:id="@+id/action_snapshot"
          android:title="@string/action_snapshot"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_delete"
          android:title="@string/action_delete"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
