<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
            android:key="ui"
            android:title="@string/pref_title_ui"
            android:entries="@array/pref_ui_titles"
            android:entryValues="@array/pref_ui_values"
            android:defaultValue="@string/pref_ui_default"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>
    <ListPreference
            android:key="theme"
            android:title="@string/pref_title_theme"
            android:entries="@array/pref_theme_titles"
            android:entryValues="@array/pref_theme_values"
            android:defaultValue="@string/pref_theme_default"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>
    <ListPreference
            android:key="editor_font_size"
            android:title="@string/pref_title_editor_font_size"
            android:entries="@array/pref_font_size_titles"
            android:entryValues="@array/pref_font_size_values"
            android:defaultValue="@string/pref_font_size_default"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>
    <ListPreference
            android:key="preview_font_size"
            android:title="@string/pref_title_preview_font_size"
            android:entries="@array/pref_font_size_titles"
            android:entryValues="@array/pref_font_size_values"
            android:defaultValue="@string/pref_font_size_default"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>
</PreferenceScreen>
