<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".ui.pages.PageActivity">
<item android:id="@+id/action_search"
      android:title="@string/action_search"
      android:icon="@drawable/search"
      android:actionViewClass="android.widget.SearchView"
      app:showAsAction="ifRoom"/>
<item android:id="@+id/action_page_sync"
      android:title="@string/action_page_sync"
      android:orderInCategory="100"
      app:showAsAction="never"/>
<item android:id="@+id/action_clear"
      android:title="@string/action_clear"
      android:orderInCategory="100"
      app:showAsAction="never"/>
<item android:id="@+id/action_settings"
      android:title="@string/action_settings"
      android:orderInCategory="100"
      app:showAsAction="never"/>
</menu>
