<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
            android:fragment="com.okbreathe.quasar.ui.settings.GeneralPreferenceFragment"
            android:title="@string/pref_header_general"
            android:icon="@drawable/ic_info_black_24dp"/>

    <header
            android:fragment="com.okbreathe.quasar.ui.settings.AppearancePreferenceFragment"
            android:title="@string/pref_header_appearance"
            android:icon="@drawable/ic_notifications_black_24dp"/>

    <header
            android:fragment="com.okbreathe.quasar.ui.settings.SyncPreferenceFragment"
            android:title="@string/pref_header_data_sync"
            android:icon="@drawable/ic_sync_black_24dp"/>

</preference-headers>
